--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "react-auto-complete-label",
-  "description": "Auto-complate and label tagging for React",
+  "description": "Auto-complete and label tagging for React",
   "version": "0.1.0",
-  "dependencies": {
-    "react-debounce-input": "^3.2.0"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
@@ -21,8 +19,11 @@
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
@@ -38,6 +39,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "accordium.com"
+    "url": "https://www.accordium.com"
   }
 }
