--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && sass src/lib/style/style.scss:src/lib/style/style.css --style compressed && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
+    "build": "rm -rf dist && sass src/lib/style/style.scss:src/lib/style/style.css --style compressed && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__ --no-comments"
   },
   "eslintConfig": {
     "extends": "react-app"
